<resources>
    <string name="app_name">黑特籃球</string>

    <string name="tab_home">首頁</string>
    <string name="tab_news">新聞</string>
    <string name="tab_live">戰況</string>
    <string name="tab_films">影片</string>
    <string name="tab_pic">圖片</string>
    <string name="tab_teach">教學</string>
    <string name="tab_fight">直播</string>
    <string name="tab_data">数据</string>
    <string name="tab_rank">排行</string>

    <string name="setting">設置</string>
    <string name="setting_notify">消息通知</string>
    <string name="setting_cache">清除緩存</string>
    <string name="setting_service">聯係客服</string>
    <string name="setting_about">關於我們</string>

    <string name="network_error">网络异常</string>

    <string name="update_title">更新提示</string>
    <string name="update">更新</string>

    <string name="share_title">分享至：</string>

    <string name="tag">標簽：</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- <string name="facebook_app_id">870028679758666</string> -->
    <string name="banner_ad_unit_id">ca-app-pub-4059643053601138/7074023609</string>
    <string name="banner_ad_native_id">ca-app-pub-4059643053601138/2364622405</string>

    <string name="facebook_app_id">479868032525276</string>
    <string name="fb_login_protocol_scheme">fb479868032525276</string>


    <string name="error_player">初始化YouTube播放器出错： (%1$s)</string>

    <string name="load_more">查看更多 >></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_state_final">已結束</string>
    <string name="game_state_playing">進行中</string>
    <string name="game_state_unstart">未開始</string>
    <string name="data_player">隊員數據</string>
    <string name="data_team">球隊數據</string>
    <string name="data_tab_pts">得分</string>
    <string name="data_tab_reb">籃板</string>
    <string name="data_tab_ast">助攻</string>
    <string name="data_tab_stl">抄截</string>
    <string name="data_tab_blk">阻攻</string>
    <string name="data_tab_turnover">失誤</string>
    <string name="rank_ew">東西區排名</string>
    <string name="rank_zone">分賽區排名</string>
    <string name="rank_zone_team">球隊排行</string>


    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="player_error">Error initializing YouTube player</string>
    <string name="seek_to">Jump To</string>
    <string name="seek_to_hint">Seconds</string>

    <string name="login">登錄</string>
    <string name="login_fail">登錄失敗，請重試</string>
    <string name="login_cancel">用戶取消登錄</string>

    <string name="mine_collection">我的收藏</string>
    <string name="mine_comment">我的評論</string>
    <string name="mine_zan">我的點讚</string>
    <string name="mine_history">瀏覽歷史</string>
    <string name="mine_notify">消息通知</string>
    <string name="film_play">視頻</string>

    <string name="play_error_tips">直播斷開，請刷新或切換直播源</string>
</resources>
