<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.mine.setting.SettingActivity">

    <com.wangcj.common.widget.TitleBar
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:backVisibility="visible"
        app:title="設置"
        app:titleBackgound="@color/red"
        app:titleColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingLeft="@dimen/page_padding_left"
        android:paddingRight="@dimen/page_padding_right">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_notify" />

        <CheckBox
            android:id="@+id/cb_receive_notify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/selector_checkbox"
            android:button="@null"
            android:checked="true"
            android:clickable="true" />
    </RelativeLayout>

    <com.wangcj.common.widget.PressRelativeLayout
        android:id="@+id/rl_setting_cache"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingEnd="@dimen/page_padding_right"
        android:paddingStart="@dimen/page_padding_left">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_cache" />

        <TextView
            android:id="@+id/tv_cache_size"
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="0kb" />
    </com.wangcj.common.widget.PressRelativeLayout>

    <com.wangcj.common.widget.PressRelativeLayout
        android:id="@+id/rl_setting_service"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="10dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingLeft="@dimen/page_padding_left"
        android:paddingRight="@dimen/page_padding_right">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_service" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_enter" />
    </com.wangcj.common.widget.PressRelativeLayout>

    <com.wangcj.common.widget.PressRelativeLayout
        android:id="@+id/rl_setting_about"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingLeft="@dimen/page_padding_left"
        android:paddingRight="@dimen/page_padding_right">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting_about" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_enter" />
    </com.wangcj.common.widget.PressRelativeLayout>

    <com.wangcj.common.widget.PressRelativeLayout
        android:id="@+id/rl_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:clickable="true"
        android:paddingLeft="@dimen/page_padding_left"
        android:paddingRight="@dimen/page_padding_right">

        <TextView
            style="@style/MainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="退出登陸" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/img_enter" />
    </com.wangcj.common.widget.PressRelativeLayout>

</LinearLayout>
