<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.wangcj.common.widget.TitleBar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        app:backVisibility="visible"
        app:title="我的"
        app:titleBackgound="@color/red"
        app:titleColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/ic_circle"
                android:gravity="center"
                android:text="@string/login"
                android:visibility="gone"
                android:textColor="@color/icons"
                android:textStyle="bold" />

            <com.wangcj.common.widget.PressRelativeLayout
                android:id="@+id/rl_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:visibility="gone"
                android:paddingBottom="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="10dp">

                <com.wangcj.common.widget.CircleSImageView
                    android:id="@+id/iv_head"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/img_default_head"
                    app:civ_border_color="@color/white"
                    app:civ_border_overlay="true" />

                <TextView
                    android:id="@+id/tv_name"
                    style="@style/SecondText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@id/iv_head"
                    android:text="用戶" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/img_enter" />

            </com.wangcj.common.widget.PressRelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:background="@color/white"
                android:orientation="horizontal">

                <com.wangcj.common.widget.PressLinearLayout
                    android:id="@+id/layout_collection"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_fav" />

                    <TextView
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/mine_collection" />

                </com.wangcj.common.widget.PressLinearLayout>

                <com.wangcj.common.widget.PressLinearLayout
                    android:id="@+id/layout_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_comment" />

                    <TextView
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="@string/mine_comment" />

                </com.wangcj.common.widget.PressLinearLayout>

                <com.wangcj.common.widget.PressLinearLayout
                    android:id="@+id/layout_zan"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_zan" />

                    <TextView
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="我的點讚" />

                </com.wangcj.common.widget.PressLinearLayout>

                <com.wangcj.common.widget.PressLinearLayout
                    android:id="@+id/layout_history"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/ic_history" />

                    <TextView
                        style="@style/SecondText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:text="瀏覽歷史" />

                </com.wangcj.common.widget.PressLinearLayout>

            </LinearLayout>

            <com.wangcj.common.widget.ItemLayout
                android:id="@+id/item_notify"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="12dp"
                android:paddingRight="10dp"
                app:dividerVisibility="gone"
                app:leftIvVisibility="visible"
                app:text="消息通知" />

            <com.wangcj.common.widget.ItemLayout
                android:id="@+id/item_setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:paddingLeft="12dp"
                android:paddingRight="10dp"
                app:dividerVisibility="gone"
                app:leftIvVisibility="visible"
                app:text="系統設置" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>